Update TowerGenInfo to hold references to all pieces and update piece locations. add land variant pieces